tests/expected_invalid_generic_affine_function_extract.diag.out
<input>:7:5: error: field access on affine value requires a copyable field type
        box.value
        ^^^^^^^^^
